--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,12 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply scroll-smooth;
+  }
   :root {
     --background: 198 53% 95%; /* #EBF4F7 */
     --foreground: 203 33% 15%; /* #1A2B33 */
